[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# reqwest = "0.11"
reqwest = { version = "0.11.18", features = ["json", "blocking", "native-tls-vendored"] }
# openssl = { version = "0.10", features = ["vendored"] }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

